Switch away from Stream.toList() for Android